--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "aytacworld-angular-markdown",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Angular markdown directive with code highlighting and row numbers",
   "private": true,
   "scripts": {
     "clean": "rimraf dist && rimraf .temp",
+    "lint": "tslint 'src/**/*.ts'",
     "inline": "gulp inline",
     "transpile": "ngc -p ./tsconfig.ngc.json",
     "package": "rollup -c",
     "minify": "uglifyjs dist/bundles/aytacworld-angular-markdown.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/aytacworld-angular-markdown.umd.min.js",
     "dist": "node tools/dist",
-    "build": "npm run clean && npm run inline && npm run transpile && npm run package && npm run minify && npm run dist",
+    "build": "npm run lint && npm run clean && npm run inline && npm run transpile && npm run package && npm run minify && npm run dist",
     "create": "npm run test:once && npm run build && cd dist && npm pack",
     "test": "karma start",
     "test:once": "karma start --singleRun"
@@ -50,6 +51,7 @@
     "@types/node": "^8.0.14",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.1",
+    "codelyzer": "^3.1.2",
     "css-loader": "^0.28.4",
     "gulp": "^3.9.1",
     "gulp-angular-embed-templates": "^2.3.0",
@@ -71,6 +73,7 @@
     "rollup": "^0.45.2",
     "sass-loader": "^6.0.6",
     "to-string-loader": "^1.1.5",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.2",
     "uglify-js": "^3.0.25",
     "webpack": "^3.3.0"
