--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "aytacworld-angular-markdown",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Angular markdown directive with code highlighting and row numbers",
   "private": true,
   "scripts": {
     "clean": "rimraf dist && rimraf .temp",
-    "lint": "tslint 'src/**/*.ts'",
+    "lint": "tslint --type-check --project tsconfig.json 'src/**/*.ts' -e 'src/**/*.spec.ts'",
     "inline": "gulp inline",
     "transpile": "ngc -p ./tsconfig.ngc.json",
     "package": "rollup -c",
