--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aytacworld-angular-markdown",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Angular markdown directive with code highlighting and row numbers",
   "private": true,
   "scripts": {
@@ -24,7 +24,9 @@
     "aytacworld",
     "angular",
     "plugin",
-    "template"
+    "markdown",
+    "highlight.js",
+    "line-numbers"
   ],
   "author": "Adem Aytaç <adem@aytacworld.com>",
   "license": "MIT",
